--- a/Exhibiz/Exhibiz HTML/css/style.css
+++ b/Exhibiz/Exhibiz HTML/css/style.css
@@ -4219,7 +4219,7 @@ transition:1s;
 /* video */
 /* ================================================== */
 
- object {
+video, object {
 display:inline-block;
 vertical-align:baseline;
 min-width:100%;
@@ -4234,21 +4234,7 @@ height:500px;
 width:100%;
 overflow: hidden;
 }
-.de-video-container video{
-	 /* Make video to at least 100% wide and tall */
-	 min-width: 100%; 
-	 min-height: 100%; 
-   
-	 /* Setting width & height to auto prevents the browser from stretching or squishing the video */
-	 width: auto;
-	 height: auto;
-   
-	 /* Center the video */
-	 position: absolute;
-	 top: 50%;
-	 left: 50%;
-	 transform: translate(-50%,-50%);
-}
+
 
 .de-video-content{
 width:100%;
@@ -5053,7 +5039,7 @@ width:100%;
 
 .grid {
   width:100%;
-}
+
 
 	margin:5px;
 }
@@ -7265,6 +7251,7 @@ display:table;
 	.container .col-md-4{ margin-bottom:30px; }
 	.container .col-md-5{ margin-bottom:30px; }
 	.container .col-md-6{ margin-bottom:30px; }
+	.copyright {margin-left: 40vw;}
 	.container .col-md-7{ margin-bottom:30px; }
 	.container .col-md-8{ margin-bottom:30px; }
 	.container .col-md-9{ margin-bottom:30px; }
