--- a/Exhibiz/Exhibiz HTML/css/style.css
+++ b/Exhibiz/Exhibiz HTML/css/style.css
@@ -245,7 +245,29 @@ overflow:visible;
 	header.smaller:not(.header-bottom):not(.side-header) div#logo {
 	height:70px;
 	}
-	
+	.logo-container{
+		border-radius: 20px;
+		background: linear-gradient(145deg, #061123, #07142a);
+		box-shadow:  15px 15px 30px #040a14, 
+					 -15px -15px 30px #0a1c3a;
+	}
+	.logo-padding:hover{
+		z-index: 1;
+		max-width:230px;
+		height:auto;
+		box-shadow: 0 10px 15px rgba(0,0,0,.5);
+	}
+	.logo-padding{
+			margin: 20px 20px 20px 20px;
+			padding: 15px 15px 15px 15px;
+			max-width: 150px;
+			transition:0.5s;
+			height: auto;
+	}
+	.logo {
+	height: 45px;
+	width: auto;
+	}
 	.logo-smaller div#logo {
 	width: 150px;
 	height:30px;
@@ -264,6 +286,8 @@ overflow:visible;
 	}
 	.logo-small{
 	margin-bottom:20px;
+	height: 35px;
+	width: auto;
 	}
 		
 	header.de_header_2{
@@ -354,7 +378,11 @@ overflow:visible;
 	float:none !important;
 	}
 	
-	
+	.gradient{
+		background: -webkit-linear-gradient(315deg,#ff8819	 0%,#FFD700 98%);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
 	/* subheader */
 	#subheader{
 	padding-bottom:70px;
@@ -6254,12 +6282,8 @@ transition:.5s;
 /* schedule */
 
 .schedule-item {
-	padding: 40px 0 30px 0;
-	border-bottom: solid 1px #eee;
 }
 .dark .schedule-item {
-	padding: 40px 0 30px 0;
-	border-bottom: solid 1px rgba(255,255,255,.1);
 }
 .schedule-listing:nth-child(even) {
 	background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(229, 229, 229, .65) 50%, rgba(255, 255, 255, 0) 100%);
@@ -6894,7 +6918,6 @@ display:table;
 	 vertical-align:middle;
 	 height:auto;
 	}
-	
 	#domain-check .text, #domain-check .button {
 	width: 100%;
 	}
