--- a/Exhibiz/Exhibiz HTML/css/style.css
+++ b/Exhibiz/Exhibiz HTML/css/style.css
@@ -245,24 +245,48 @@ overflow:visible;
 	header.smaller:not(.header-bottom):not(.side-header) div#logo {
 	height:70px;
 	}
+	.logo-box{
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+	}
+	@media screen and (max-width:800px) {
+		.logo-box {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+		}
+	  }
+	  
 	.logo-container{
 		border-radius: 20px;
 		background: linear-gradient(145deg, #061123, #07142a);
 		box-shadow:  15px 15px 30px #040a14, 
 					 -15px -15px 30px #0a1c3a;
+		padding: 20px 20px 20px 20px;
+		width: 150px;
+		height: 150px;
+		transition:0.5s;
+		margin: 20px 20px 20px 20px;
 	}
-	.logo-padding:hover{
+	.logo-container:hover{
 		z-index: 1;
-		max-width:230px;
-		height:auto;
+		width: 180px;
+		height: 180px;
 		box-shadow: 0 10px 15px rgba(0,0,0,.5);
 	}
 	.logo-padding{
 			margin: 20px 20px 20px 20px;
 			padding: 15px 15px 15px 15px;
-			max-width: 150px;
-			transition:0.5s;
+			max-width: 120px;
 			height: auto;
+	}
+	.logo-props{
+		height: 100%; 
+		width: 100%; 
+		object-fit: contain;
 	}
 	.logo {
 	height: 45px;
@@ -1694,7 +1718,7 @@ border:solid 1px #ddd;
 	}
 	
 	.coming-soon  .social-icons i{
-	font-size:20px;
+	font-size:24px;
 	margin-left:10px;
 	margin-right:10px;
 	}
@@ -2290,6 +2314,9 @@ border:solid 1px #ddd;
 	
 	/* heading */
 	/* ------------------------------ */
+	.form-container{
+		justify-content: center;
+	}
 	.form-transparent input[type=text], .form-transparent textarea, .form-transparent input[type=email]{
 	padding:10px;
 	margin-bottom:20px;
@@ -2376,6 +2403,7 @@ border:solid 1px #ddd;
 	}
 	h1.title-3{
 	font-size:48px;
+	text-shadow: 5px 5px 3px rgba(255,255,255,0.1);
 	}
 	h1.title-3 strong{
 	font-family:"Allura";
@@ -3411,10 +3439,10 @@ border:solid 1px #ddd;
 	text-shadow:none;
 	color: #fff;
 	padding: 8px;
-	width: 28px;
-	height: 28px;
+	width: 36px;
+	height: 36px;
 	text-align: center;
-	font-size:16px;
+	font-size:24px;
 	border-radius:1px;
 	-moz-border-radius:1px;
 	-webkit-border-radius:1px;
@@ -4795,7 +4823,27 @@ overflow:hidden;
 .picframe.s2 span.overlay .project-name{
 	color:#ffffff;
 }
+.picframe .overlay-1-v{
+	text-align: center;
+	width: 100px;
+	background: rgba(0,0,0,.7);
+	position:absolute;
+	width:102%;
+	height:100%;
+	z-index:1000;
+	display:table;
+}
+.picframe .overlay-1-v .pf_text{
+	display:table-cell;
+	vertical-align:middle;
+}
+.light .picframe .overlay-1-v{
+	background: rgba(255,255,255,.3);
+}
 
+.picframe.s2 span.overlay-1 .project-name{
+	color:#ffffff;
+}
 .pf_text {
 color:#eceff3;
 }
@@ -4877,6 +4925,36 @@ width:100%;
 	transform: scale(1.2);
 	opacity:0;
 }
+.picframe:hover .overlay-1-v{
+	transform: scale(1.2);
+	opacity:0;
+}
+
+.picframe:hover img{
+	transform: scale(1.3);
+}
+.picframe-1 {
+	display: flex;
+	position: relative;
+	overflow: visible;
+	align-items: center;
+	justify-content:center;
+	vertical-align: middle;
+}
+.picframe-1 img{
+	width:100%;
+	height: 24.9%;
+	overflow: visible;
+}
+
+.picframe:hover .overlay-v{
+	transform: scale(1.2);
+	opacity:0;
+}
+.picframe:hover .overlay-1-v{
+	transform: scale(1.2);
+	opacity:0;
+}
 
 .picframe:hover img{
 	transform: scale(1.3);
@@ -4884,6 +4962,10 @@ width:100%;
 
 .s2 .overlay-v,
 .s2 .overlay-v:hover{
+	background: rgba(40,40,40,.3);
+}
+.s2 .overlay-1-v,
+.s2 .overlay-1-v:hover{
 	background: rgba(40,40,40,.3);
 }
 .s2 .overlay-v .project-name{
@@ -4976,7 +5058,9 @@ text-align:center;
 .overlay  .pf_text{
 display: inline-block;
 }
-
+.overlay-1  .pf_text{
+	display: inline-block;
+	}
 .project-name{
 font-size:11px;
 text-transform:uppercase;
@@ -5054,19 +5138,31 @@ background: url(../images-event/icon-zoom.png) center no-repeat;
 width:24.9%;
 float:left;
 }
-
 .pf_full_width.pf_3_cols .item{
-width:33.3%;
-}
-
+	width:33.3%;
+	}
+	
 .pf_full_width.pf_2_cols .item{
-width:49.9%;
-}
+	width:49.9%;
+	}
+.pf_full_width .item-1{
+	width:49.9%;
+	float:left;
+	}
+.pf_full_width.pf_2_cols .item-1{
+		width:49.9%;
+	}
+		
+.pf_full_width.pf_3_cols .item-1{
+	width:33.3%;
+	}
+
 
 .pf_full_width img{
 float:left;
 width:100%;
 }
+
 
 	/* ---- grid ---- */
 
@@ -5318,10 +5414,10 @@ color:#606060;
 .wm{
 	width:100%;
 	position:relative;
-	font-size:200px;
+	font-size:100px;
 	text-align:center;
 	font-weight:bold;
-	top:33px;
+	top:25px;
 	-webkit-user-select:none;-moz-user-select:-moz-none;
 	-ms-user-select:none;user-select:none;
 }
@@ -5329,9 +5425,13 @@ color:#606060;
 .wm.dark{
 	color:rgba(255,255,255,.1);
 }
-
+@media screen and (max-width:900px) {
+	.wm{
+		visibility: hidden !important;
+		}
+  }
 .wm.dark.wm-border{
-	font-size:280px;
+	font-size:140px;
 	color:rgba(0,0,0,0);
 	-webkit-text-stroke-width: 1px;
 	-webkit-text-stroke-color: rgba(255,255,255,.15);
@@ -5935,6 +6035,9 @@ right:-15px;
 .border-deco .item{
 	display:inline-block;
 }
+.border-deco .item-1{
+	display:inline-block;
+}
 
 .text-slider.dark{
 	color:#222;
@@ -5946,7 +6049,10 @@ right:-15px;
 	font-size:60px;
 	margin-top:5px;
 }
-
+.item-1 i{
+	font-size:60px;
+	margin-top:5px;
+}
 .text-slider.big-text i{
 	font-size:90px;
 	margin-top:15px;
@@ -6309,10 +6415,10 @@ transition:.5s;
 	font-size:14px;
 }
 .schedule-item .sc-pic {
-	width: 120px;
+	width: 130px;
 }
 .schedule-item .sc-pic img {
-	width: 90px;
+	width: 130px;
 	padding:5px;
 	height: auto;
 }
@@ -6320,16 +6426,17 @@ transition:.5s;
 	font-weight: normal;
 	font-size: 14px;
 	width: 160px;
-	padding-top: 15px;
+	text-align: center;
+	padding-top: 40px;
 }
 .schedule-item .sc-name h4 {
-	font-size: 14px;
+	font-size: 16px;
 	margin: 0;
 	line-height: 1.6em;
 }
 .schedule-item .sc-name span {
 	font-weight: normal;
-	font-size: 12px;
+	font-size: 14px;
 }
 .schedule-item .sc-info {
 	float: none;
@@ -7294,6 +7401,9 @@ display:table;
 	.grid_gallery .item{
 	width:100%;
 	}
+	.grid_gallery .item-1{
+		width:100%;
+	}
 	
 	.de-navbar-left #wrapper{
 	overflow:hidden;
@@ -7400,6 +7510,10 @@ display:table;
 	float:left;
 	width:49.9% !important;
 	}
+	.pf_full_width .item-1{
+		float:left;
+		width:49.9% !important;
+		}
 
 	/*.item{
 	font-size:48px;
@@ -7409,6 +7523,9 @@ display:table;
 	.item i{
 	font-size:36px;
 	}
+	.item-1 i{
+		font-size:36px;
+		}
 	
 	#de-sidebar{
 	width:100%;
@@ -7471,13 +7588,16 @@ display:table;
 		float: none;
 	}
 	.schedule-item .sc-pic {
-		width: 80px;
+		width: 150px;
 	}
 	.schedule-item .sc-pic img {
-		width: 60px;
+		width: 150px;
 	}
 	.schedule-item .sc-name {
-		padding-top: 5px;
+		font-weight: normal;
+		font-size: 14px;
+		width: 160px;
+		padding-top: 50px;
 	}
 	.schedule-item .sc-info {
 		float: none;
@@ -7517,6 +7637,11 @@ display:table;
 	float:left;
 	width:100% !important;
 	}
+	@media only screen and (max-width: 480px) {
+		.pf_full_width .item-1{
+		float:left;
+		width:100% !important;
+		}
 	
 	/*.item{
 	font-size:32px;
