--- a/Exhibiz/Exhibiz HTML/css/bg.css
+++ b/Exhibiz/Exhibiz HTML/css/bg.css
@@ -55,7 +55,7 @@ background:url(../images/background/subheader.jpg)top fixed;
 #section-welcome-14{background:url(../images/background/bg-30.jpg) top fixed;}
 #section-why-choose-us{background:url(../images/background/bg-8.jpg) top fixed;}
 #section-why-choose-us-3{background:url(../images/background/bg-16.jpg) top fixed;}
-#section-portfolio{background:#222; width:101%; overflow:hidden;}
+#section-portfolio{background:url(../images-event/misc/back.png); width:100%; overflow:hidden;}
 .de_light #section-portfolio{background:#fff;}
 #section-skill-bar{ background:url(../images/background/bg-8.jpg) top fixed;}
 #section-testimonial{ background:url(../images/background/bg-3.jpg) top fixed;}
