--- a/Exhibiz/Exhibiz HTML/css/owl.carousel.css
+++ b/Exhibiz/Exhibiz HTML/css/owl.carousel.css
@@ -9,9 +9,16 @@
 .owl-carousel {
   display: none;
   width: 100%;
+  border: 0.2px solid rgb(255, 255, 255,0.2);
+  -webkit-background-clip: padding-box; /* for Safari */
+  background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
   -webkit-tap-highlight-color: transparent;
   /* position relative and z-index fix webkit rendering fonts issue */
   position: relative;
+  background-image: url(../images-event/misc/Melhii.png);
+  background-size: contain !important;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
   z-index: 1; }
   .owl-carousel .owl-stage {
     position: relative;
